--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>OWASP Node Goat</title>
+    <title>EasyRetire</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/bootstrap.css" rel="stylesheet">
@@ -29,14 +29,6 @@
 
     <div id="wrapper">
         <!-- Sidebar -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">OWASP Node Goat Project</a>
-            </div>
-        </nav>
-
-
         <div id="page-wrapper">
 
             <div class="row">
